--- a/app/src/main/res/layout/activity_drill.xml
+++ b/app/src/main/res/layout/activity_drill.xml
@@ -8,18 +8,24 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".DrillActivity">
 
-    <TextView
+    <FrameLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        style="@style/PresentationText"
-        android:lines="3"
-        android:linksClickable="true"
-        android:gravity="center"
-        android:text="[empty]"
-        android:singleLine="false"
-        android:id="@+id/textView" />
+        android:background="#CCCCCC"
+        android:id="@+id/presentation_area">
 
-    <TextView
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            style="@style/PresentationText"
+            android:lines="3"
+            android:linksClickable="true"
+            android:gravity="center"
+            android:id="@+id/presentation_text"/>
+
+    </FrameLayout>
+
+    <EditText
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         style="@style/InputText"/>
@@ -29,7 +35,7 @@
         android:layout_height="wrap_content"
         android:text="@string/btn_start"
         android:id="@+id/start_button"
-        android:layout_alignBottom="@+id/textView"
+        android:layout_alignBottom="@+id/presentation_area"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="36dp"
         android:background="@android:drawable/btn_default"
