--- a/app/src/main/res/layout/activity_drill.xml
+++ b/app/src/main/res/layout/activity_drill.xml
@@ -26,7 +26,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/countdown"
+            android:id="@+id/countdown_text"
             android:layout_gravity="center"
             android:textSize="42pt"
             android:textIsSelectable="true"
@@ -36,8 +36,12 @@
 
     <EditText
         android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        style="@style/InputText"/>
+        android:layout_height="match_parent"
+        style="@style/InputText"
+        android:id="@+id/input_text"
+        android:layout_below="@+id/speed"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="wrap_content"
@@ -49,5 +53,37 @@
         android:layout_marginBottom="36dp"
         android:background="@android:drawable/btn_default"
         android:minWidth="150dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="0 wpm"
+        android:id="@+id/speed"
+        android:layout_below="@+id/presentation_area"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:singleLine="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="100%"
+        android:id="@+id/accuracy"
+        android:singleLine="true"
+        android:layout_below="@+id/presentation_area"
+        android:layout_alignRight="@+id/presentation_area"
+        android:layout_alignEnd="@+id/presentation_area" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="0:00"
+        android:id="@+id/countdown"
+        android:singleLine="true"
+        android:layout_above="@+id/input_text"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
