--- a/app/src/main/res/layout/activity_drill.xml
+++ b/app/src/main/res/layout/activity_drill.xml
@@ -41,7 +41,8 @@
         android:id="@+id/input_text"
         android:layout_below="@+id/speed"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:capitalize="none" />
 
     <Button
         android:layout_width="wrap_content"
