--- a/app/src/main/res/layout/activity_drill.xml
+++ b/app/src/main/res/layout/activity_drill.xml
@@ -42,18 +42,19 @@
         android:layout_below="@+id/speed"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:capitalize="none" />
+        android:enabled="false" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/btn_start"
         android:id="@+id/start_button"
-        android:layout_alignBottom="@+id/presentation_area"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="36dp"
         android:background="@android:drawable/btn_default"
-        android:minWidth="150dp" />
+        android:minWidth="150dp"
+        android:layout_alignTop="@+id/input_text"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="30dp" />
 
     <TextView
         android:layout_width="wrap_content"
